# cmake-sample

./: CMakeLists.txt  common.cmake  commonqt.cmake
APPS/: CMakeLists.txt
APPS/Main/: CMakeLists.txt
APPS/Main/src/: main.cpp
LIBS/: CMakeLists.txt
LIBS/multiplication/: CMakeLists.txt
LIBS/multiplication/src/: multiplication.cpp
LIBS/multiplication/src/include/: multiplication.h
LIBS/sum/: CMakeLists.txt
LIBS/sum/src/: sum.cpp
LIBS/sum/src/include/: sum.h
